--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,6 @@
         }
     ],
     "require": {},
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "version": "1.0.0"
 }
