vendor name change

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yaniv/101_include",
+    "name": "g_h_projects/include",
     "description": "A simple PHP package ",
     "type": "library",
     "license": "My Custom License",
@@ -15,5 +15,6 @@
         }
     ],
     "require": {},
+    "minimum-stability": "stable",
     "version": "1.0.0"
 }
